--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="author" content="" />
   <title>Reto Aranjuez - Pon a prueba tus conocimientos</title>
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="css/styles.css" rel="stylesheet" />
 </head>
 
@@ -19,7 +19,8 @@
       <a class="navbar-brand" href="#!">
         <img src="assets/logo.png" alt="Reto Aranjuez Logo" width="120" height="50">
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -31,7 +32,7 @@
             <a class="nav-link" href="#!">Reglas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#!">Puntajes</a>
+            <a class="nav-link" href="#!">Ranking</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#!">Contacto</a>
@@ -46,35 +47,31 @@
       <div class="row d-flex justify-content-center align-items-center text-center">
         <div class="col-lg-8 col-md-10 mx-auto">
           <h1 class="display-4 fw-bold">¡Reto Aranjuez!</h1>
-          <p class="lead mb-4">¿Cuánto sabes sobre la historia, cultura y lugares emblemáticos de Aranjuez? ¡Pon a prueba tus conocimientos en este divertido juego de preguntas y respuestas!</p>
+          <p class="lead mb-4">¿Cuánto sabes sobre la historia, cultura y lugares emblemáticos de Aranjuez? ¡Pon a
+            prueba tus conocimientos en este divertido juego de preguntas y respuestas!</p>
           <a class="btn btn-primary btn-lg" href="#!">¡Juega Ahora!</a>
         </div>
       </div>
     </div>
   </header>
 
-  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" >
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
+  <div id="carouselExample" class="carousel slide">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="IMG20240322115916.jpg" class="d-block w-70" alt="" >
+        <img src="IMG20240322115916.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="IMG20240322120612.jpg" class="d-block w-70" alt="..." >
+        <img src="IMG20240322115916.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="IMG20240322115916.jpg" class="d-block w-70" alt="..." >
+        <img src="IMG20240322115916.jpg" class="d-block w-100" alt="...">
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
@@ -94,23 +91,33 @@
           </div>
         </div>
         <div class="col-lg-4">
-            <div class="card bg-white border-0 h-100 text-center">
-              <div class="card-body">
-                <i class="bi bi-house-fill display-4 text-primary mb-3"></i>
-                <h3 class="h4">La fresa</h3>
-                <p class="mb-0">¿Sabías que la fresa es la fruta más famosa de Aranjuez?</p>
-              </div>
+          <div class="card bg-white border-0 h-100 text-center">
+            <div class="card-body">
+              <i class="bi bi-house-fill display-4 text-primary mb-3"></i>
+              <h3 class="h4">La fresa</h3>
+              <p class="mb-0">¿Sabías que la fresa es la fruta más famosa de Aranjuez?</p>
             </div>
           </div>
-          <div class="col-lg-4">
-            <div class="card bg-white border-0 h-100 text-center">
-              <div class="card-body">
-                <i class="bi bi-house-fill display-4 text-primary mb-3"></i>
-                <h3 class="h4">Paisaje</h3>
-                <p class="mb-0">¿Sabías que el paisaje cultural de Aranjuez fue declarado Patrimonio Mundial?</p>
-              </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="card bg-white border-0 h-100 text-center">
+            <div class="card-body">
+              <i class="bi bi-house-fill display-4 text-primary mb-3"></i>
+              <h3 class="h4">Paisaje</h3>
+              <p class="mb-0">¿Sabías que el paisaje cultural de Aranjuez fue declarado Patrimonio Mundial?</p>
             </div>
           </div>
-         
+        </div>
+        <footer class="py-3 bg-light">
+          <div class="container">
+            <p class="m-0 text-center text-muted">
+              &copy; Copyright 2024 CristianVP <a href="https://github.com/cristianvpe"></a>
+            </p>
+          </div>
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+          crossorigin="anonymous"></script>
+</body>
+
 </html>
-         
