--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Test your knowledge of Aranjuez in this fun and educational quiz game!" />
   <meta name="author" content="" />
   <title>Reto Aranjuez - Pon a prueba tus conocimientos</title>
-  <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="images/bear-7269323_1280.png" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="css/styles.css" rel="stylesheet" />
@@ -17,7 +17,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container px-lg-5">
       <a class="navbar-brand" href="#!">
-        <img src="assets/logo.png" alt="Reto Aranjuez Logo" width="120" height="50">
+        <img src="images/bear-7269323_1280.png" alt="Reto Aranjuez Logo" width="120" height="50">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,7 +47,8 @@
       <div class="row d-flex justify-content-center align-items-center text-center">
         <div class="col-lg-8 col-md-10 mx-auto">
           <h1 class="display-4 fw-bold">¡Reto Aranjuez!</h1>
-          <p class="lead mb-4">¿Cuánto sabes sobre la historia, cultura y lugares emblemáticos de Aranjuez? ¡Pon a
+          <img src="images/bear-7269323_1280.png" width="100%"></img>
+          <p class="lead mb-4 fw-bold">¿Cuánto sabes sobre la historia, cultura y lugares emblemáticos de Aranjuez? ¡Pon a
             prueba tus conocimientos en este divertido juego de preguntas y respuestas!</p>
           <a class="btn btn-primary btn-lg" href="#!">¡Juega Ahora!</a>
         </div>
@@ -56,15 +57,15 @@
   </header>
 
   <div id="carouselExample" class="carousel slide">
-    <div class="carousel-inner">
+    <div class="carousel-inner"> 
       <div class="carousel-item active">
-        <img src="IMG20240322115916.jpg" class="d-block w-100" alt="...">
+        <img src="images/IMG_20240322_120600.jpg" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="IMG20240322115916.jpg" class="d-block w-100" alt="...">
+        <img src="images/Casa_del_Gobernador,_Aranjuez.jpg"  alt="...">
       </div>
       <div class="carousel-item">
-        <img src="IMG20240322115916.jpg" class="d-block w-100" alt="...">
+        <img src="images/IMG20240322115916.jpg" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -111,7 +112,7 @@
         <footer class="py-3 bg-light">
           <div class="container">
             <p class="m-0 text-center text-muted">
-              &copy; Copyright 2024 CristianVP <a href="https://github.com/cristianvpe"></a>
+              &copy; Copyright 2024 CristianVP <a href="https://github.com/cristianvpe">Github</a>
             </p>
           </div>
         </footer>
