--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="Test your knowledge of Aranjuez in this fun and educational quiz game!" />
   <meta name="author" content="" />
-  <title>Reto Aranjuez - Pon a prueba tus conocimientos</title>
+  <title>Reto Aranjuez</title>
   <link rel="icon" type="image/x-icon" href="images/bear-7269323_1280.png" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link href="css/styles.css" rel="stylesheet" />
 </head>
 
@@ -25,8 +26,13 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <audio id="audio" src="audio.mp3" type="audio"></audio>
+          <button id="btnReproducir" class="btn btn-outline-danger">
+            <span id="iconoReproducir" class="bi bi-play-fill"></span>
+        </button>
+        
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#!">Inicio</a>
+            <a class="nav-link active" aria-current="page" href="">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#!">Reglas</a>
@@ -48,9 +54,9 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <h1 class="display-4 fw-bold">¡Reto Aranjuez!</h1>
           <img src="images/bear-7269323_1280.png" width="100%"></img>
-          <p class="lead mb-4 fw-bold">¿Cuánto sabes sobre la historia, cultura y lugares emblemáticos de Aranjuez? ¡Pon a
-            prueba tus conocimientos en este divertido juego de preguntas y respuestas!</p>
-          <a class="btn btn-primary btn-lg" href="#!">¡Juega Ahora!</a>
+          <p class="lead mb-4 fw-bold">¿Cuánto sabes sobre la historia, cultura y lugares emblemáticos de Aranjuez? <br>¡Pon a
+            prueba tus conocimientos en este divertido juego de preguntas!</p>
+          <a class="btn btn-dark btn-lg" href="#!">¡Juega Ahora!</a>
         </div>
       </div>
     </div>
@@ -59,13 +65,13 @@
   <div id="carouselExample" class="carousel slide">
     <div class="carousel-inner"> 
       <div class="carousel-item active">
-        <img src="images/IMG_20240322_120600.jpg" alt="...">
+        <img src="images/aranjuez.jpg" alt="palacio">
       </div>
       <div class="carousel-item">
-        <img src="images/Casa_del_Gobernador,_Aranjuez.jpg"  alt="...">
+        <img src="images/aranjuez2.jpeg"  alt="chinescos">
       </div>
       <div class="carousel-item">
-        <img src="images/IMG20240322115916.jpg" alt="...">
+        <img src="images/aranjuez3.jpg" alt="fuente">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -78,37 +84,27 @@
     </button>
   </div>
 
-  <section class="py-5 bg-light fun-facts">
-    <div class="container px-lg-5">
-      <h2 class="text-center mb-4">Datos Curiosos de Aranjuez</h2>
-      <div class="row gx-lg-5">
-        <div class="col-lg-4">
-          <div class="card bg-white border-0 h-100 text-center">
-            <div class="card-body">
-              <i class="bi bi-house-fill display-4 text-primary mb-3"></i>
-              <h3 class="h4">Palacio Real</h3>
-              <p class="mb-0">¿Sabías que el Palacio Real de Aranjuez es uno de los más grandes de España?</p>
-            </div>
-          </div>
+  <div class="container mt-3">
+    <h1 class="title-form">Formulario de contacto</h1>
+        <div class="mb-3">
+            <label for="nombre" class="form-label">Nombre completo:</label>
+            <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Introduce tu nombre" required>
         </div>
-        <div class="col-lg-4">
-          <div class="card bg-white border-0 h-100 text-center">
-            <div class="card-body">
-              <i class="bi bi-house-fill display-4 text-primary mb-3"></i>
-              <h3 class="h4">La fresa</h3>
-              <p class="mb-0">¿Sabías que la fresa es la fruta más famosa de Aranjuez?</p>
-            </div>
-          </div>
+
+        <div class="mb-3">
+            <label for="email" class="form-label">Correo electrónico:</label>
+            <input type="email" class="form-control" id="email" name="email" placeholder="Introduce tu email" required>
         </div>
-        <div class="col-lg-4">
-          <div class="card bg-white border-0 h-100 text-center">
-            <div class="card-body">
-              <i class="bi bi-house-fill display-4 text-primary mb-3"></i>
-              <h3 class="h4">Paisaje</h3>
-              <p class="mb-0">¿Sabías que el paisaje cultural de Aranjuez fue declarado Patrimonio Mundial?</p>
-            </div>
-          </div>
+
+        <div class="mb-3">
+            <label for="dudas" class="form-label">Dudas o sugerencias:</label>
+            <textarea class="form-control" id="dudas" name="dudas" rows="3" placeholder="Escribe tu mensaje" required></textarea>
         </div>
+
+        <button type="submit" class="btn btn-primary">Enviar formulario</button>
+    </form>
+</div>
+
         <footer class="py-3 bg-light">
           <div class="container">
             <p class="m-0 text-center text-muted">
@@ -116,9 +112,8 @@
             </p>
           </div>
         </footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-          crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KF6o/J+e2iF74x8hKTTU1jYqU+C2aJ74h+Q2G6h6x+Y86j3jQ8C5QkYQ+qC6Q" crossorigin="anonymous"></script>
+        <script src="js/scripts.js"></script>
 </body>
 
 </html>
