--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
           <audio id="audio" src="audio.mp3" type="audio"></audio>
           <button id="btnReproducir" class="btn btn-outline-danger">
             <span id="iconoReproducir" class="bi bi-play-fill"></span>
-        </button>
-        
+          </button>
+
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="">Inicio</a>
           </li>
@@ -54,21 +54,22 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <h1 class="display-4 fw-bold">¡Reto Aranjuez!</h1>
           <img src="images/bear-7269323_1280.png" width="100%"></img>
-          <p class="lead mb-4 fw-bold">¿Cuánto sabes sobre la historia, cultura y lugares emblemáticos de Aranjuez? <br>¡Pon a
+          <p class="lead mb-4 fw-bold">¿Cuánto sabes sobre la historia, cultura y lugares emblemáticos de Aranjuez?
+            <br>¡Pon a
             prueba tus conocimientos en este divertido juego de preguntas!</p>
-          <a class="btn btn-dark btn-lg" href="#!">¡Juega Ahora!</a>
+          <a class="btn btn-dark" href="#!">¡Juega Ahora!</a>
         </div>
       </div>
     </div>
   </header>
 
   <div id="carouselExample" class="carousel slide">
-    <div class="carousel-inner"> 
+    <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="images/aranjuez.jpg" alt="palacio">
       </div>
       <div class="carousel-item">
-        <img src="images/aranjuez2.jpeg"  alt="chinescos">
+        <img src="images/aranjuez2.jpeg" alt="chinescos">
       </div>
       <div class="carousel-item">
         <img src="images/aranjuez3.jpg" alt="fuente">
@@ -86,34 +87,37 @@
 
   <div class="container mt-3">
     <h1 class="title-form">Formulario de contacto</h1>
-        <div class="mb-3">
-            <label for="nombre" class="form-label">Nombre completo:</label>
-            <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Introduce tu nombre" required>
-        </div>
+    <div class="mb-3">
+      <label for="nombre" class="form-label">Nombre completo:</label>
+      <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Introduce tu nombre" required>
+    </div>
 
-        <div class="mb-3">
-            <label for="email" class="form-label">Correo electrónico:</label>
-            <input type="email" class="form-control" id="email" name="email" placeholder="Introduce tu email" required>
-        </div>
+    <div class="mb-3">
+      <label for="email" class="form-label">Correo electrónico:</label>
+      <input type="email" class="form-control" id="email" name="email" placeholder="Introduce tu email" required>
+    </div>
 
-        <div class="mb-3">
-            <label for="dudas" class="form-label">Dudas o sugerencias:</label>
-            <textarea class="form-control" id="dudas" name="dudas" rows="3" placeholder="Escribe tu mensaje" required></textarea>
-        </div>
+    <div class="mb-3">
+      <label for="dudas" class="form-label">Dudas o sugerencias:</label>
+      <textarea class="form-control" id="dudas" name="dudas" rows="3" placeholder="Escribe tu mensaje"
+        required></textarea>
+    </div>
 
-        <button type="submit" class="btn btn-primary">Enviar formulario</button>
+    <button type="submit" class="btn btn-dark">Enviar</button>
     </form>
-</div>
+  </div>
 
-        <footer class="py-3 bg-light">
-          <div class="container">
-            <p class="m-0 text-center text-muted">
-              &copy; Copyright 2024 CristianVP <a href="https://github.com/cristianvpe">Github</a>
-            </p>
-          </div>
-        </footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KF6o/J+e2iF74x8hKTTU1jYqU+C2aJ74h+Q2G6h6x+Y86j3jQ8C5QkYQ+qC6Q" crossorigin="anonymous"></script>
-        <script src="js/scripts.js"></script>
+  <footer class="py-3 bg-light">
+    <div class="container">
+      <p class="m-0 text-center text-muted">
+        &copy; Copyright 2024 CristianVP <a href="https://github.com/cristianvpe">Github</a>
+      </p>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KF6o/J+e2iF74x8hKTTU1jYqU+C2aJ74h+Q2G6h6x+Y86j3jQ8C5QkYQ+qC6Q"
+    crossorigin="anonymous"></script>
+  <script src="js/scripts.js"></script>
 </body>
 
 </html>
