--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a class="nav-link" href="#!">Ranking</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#!">Contacto</a>
+            <a class="nav-link" href="contacto.html">Contacto</a>
           </li>
         </ul>
       </div>
@@ -110,13 +110,13 @@
   <footer class="py-3 bg-light">
     <div class="container">
       <p class="m-0 text-center text-muted">
-        &copy; Copyright 2024 CristianVP <a href="https://github.com/cristianvpe">Github</a>
+        &copy; 2024 CristianVP <a href="https://github.com/cristianvpe">Github</a>
       </p>
     </div>
   </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KF6o/J+e2iF74x8hKTTU1jYqU+C2aJ74h+Q2G6h6x+Y86j3jQ8C5QkYQ+qC6Q"
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+ 
   <script src="js/scripts.js"></script>
 </body>
 
