--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
     </button>
   </div>
 
+  <div class="map">
+    <h1 class="title-form">Mapa de Aranjuez</h1>
+    <p class="lead mb-4 fw-bold text-center">Accede al mapa de la ciudad y descubre sus rincones</p>
+    <div class="map-image">
+      <img src="images/mapa.png" alt="Aranjuez Map Image" width="1000" height="700">
+    </div>
+    <button type="button" class="btn btn-dark" download="mapa.png">Descargar Mapa</button>
+  </div>
+
   <div class="container mt-3">
     <h1 class="title-form">Formulario de contacto</h1>
     <div class="mb-3">
