--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark">
     <div class="container px-lg-5">
       <a class="navbar-brand" href="#!">
         <img src="images/bear-7269323_1280.png" alt="Reto Aranjuez Logo" width="120" height="50">
@@ -32,7 +32,7 @@
           </button>
 
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="">Inicio</a>
+            <a class="nav-link" aria-current="page" href="">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#!">Reglas</a>
@@ -116,9 +116,9 @@
     </form>
   </div>
 
-  <footer class="py-3 bg-light">
+  <footer class="py-3 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-muted">
+      <p class="m-0 text-center text-muted ">
         &copy; 2024 CristianVP <a href="https://github.com/cristianvpe">Github</a>
       </p>
     </div>
