--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <audio id="audio" src="audio.mp3" type="audio"></audio>
+          <!-- <audio id="audio" src="audio.mp3" type="audio"></audio>
           <button id="btnReproducir" class="btn btn-outline-danger">
             <span id="iconoReproducir" class="bi bi-play-fill"></span>
-          </button>
+          </button> -->
 
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="">Inicio</a>
@@ -41,7 +41,7 @@
             <a class="nav-link" href="#!">Ranking</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contacto.html">Contacto</a>
+            <a class="nav-link" href="#!">Contacto</a>
           </li>
         </ul>
       </div>
@@ -52,12 +52,28 @@
     <div class="container px-lg-5">
       <div class="row d-flex justify-content-center align-items-center text-center">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <h1 class="display-4 fw-bold">¡Reto Aranjuez!</h1>
+
+          <h1 class="display-4 fw-bold mb-4">¡Reto Aranjuez!</h1>
+
+          <div class="audio-controls text-center">
+            <audio id="audio" src="audio.mp3" type="audio"></audio>
+            <button id="btnReproducir" class="btn btn-outline-dark">
+              <span id="iconoReproducir" class="bi bi-play-fill"></span>
+            </button>
+          </div>
+
+          <div class="text-content mt-4">
+            <p class="lead mb-4 fw-bold">¿Cuánto sabes sobre la historia, cultura y lugares emblemáticos de Aranjuez?
+              ¡Pon a prueba tus conocimientos en este divertido juego de preguntas!</p>
+          </div>
+
+          <div class="d-flex justify-content-center">
+            <a class="btn btn-dark me-2" href="#!">¡Juega Ahora!</a>
+            <div class=""></div>
+            <a class="btn btn-dark" href="images/mapa.png">Descargar Mapa</a>
+          </div>
+
           <img src="images/bear-7269323_1280.png" width="100%"></img>
-          <p class="lead mb-4 fw-bold">¿Cuánto sabes sobre la historia, cultura y lugares emblemáticos de Aranjuez?
-            <br>¡Pon a
-            prueba tus conocimientos en este divertido juego de preguntas!</p>
-          <a class="btn btn-dark" href="#!">¡Juega Ahora!</a>
         </div>
       </div>
     </div>
@@ -89,9 +105,8 @@
     <h1 class="title-form">Mapa de Aranjuez</h1>
     <p class="lead mb-4 fw-bold text-center">Accede al mapa de la ciudad y descubre sus rincones</p>
     <div class="map-image">
-      <img src="images/mapa.png" alt="Aranjuez Map Image" width="1080" height="720">
+      <img src="images/mapa.png" alt="Aranjuez Map Image" style="max-width: 100%; height: auto; margin: 0;">
     </div>
-    <button type="button" class="btn btn-dark" download="mapa.png">Descargar Mapa</button>
   </div>
 
   <div class="container mt-3">
@@ -112,8 +127,9 @@
         required></textarea>
     </div>
 
-    <button type="submit" class="btn btn-dark">Enviar</button>
-    </form>
+    <div class="d-flex justify-content-center">
+      <button type="submit" id="formulario" class="btn btn-dark text-center">Enviar</button>
+    </div>
   </div>
 
   <footer class="py-3 bg-dark">
@@ -125,7 +141,7 @@
   </footer>
   <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
- 
+
   <script src="js/scripts.js"></script>
 </body>
 
