--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <div class="container mt-3">
     <h1 class="title-form">Formulario de contacto</h1>
     <div class="mb-3">
-      <label for="nombre" class="form-label">Nombre completo:</label>
+      <label for="nombre" class="form-label">Nombre:</label>
       <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Introduce tu nombre" required>
     </div>
 
