--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
     <div class="container px-lg-5">
       <div class="row d-flex justify-content-center align-items-center text-center">
         <div class="col-lg-8 col-md-10 mx-auto">
-
           <h1 class="display-4 fw-bold mb-4">¡Reto Aranjuez!</h1>
 
           <div class="audio-controls text-center">
@@ -69,8 +68,8 @@
 
           <div class="d-flex justify-content-center">
             <a class="btn btn-dark me-2" href="#!">¡Juega Ahora!</a>
-            <div class=""></div>
-            <a class="btn btn-dark" href="images/mapa.png">Descargar Mapa</a>
+            <div class="btnMapa"></div>
+            <a class="btn btn-dark" href="images/mapa.png" target="_blank">Descargar Mapa</a>
           </div>
 
           <img src="images/bear-7269323_1280.png" width="100%"></img>
